--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cloudinary==1.29.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.13
+django-simple-pagination==1.3
 gunicorn==20.1.0
 oauthlib==3.2.0
 Pillow==9.2.0
